--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <title>Profile Website</title>
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
