--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <title>Profile Website</title>
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <script type="text/javascript" src="https://api.map.baidu.com/api?v=3.0&ak=z8fH2H3aZfAVSVGkVIRMG2vUPYzrvXYQ"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
