--- a/public/index.html
+++ b/public/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Profile Website</title>
+    <title>MMeowhite</title>
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <!--  BaiduMap API  -->
     <script type="text/javascript" src="https://api.map.baidu.com/api?v=3.0&ak=z8fH2H3aZfAVSVGkVIRMG2vUPYzrvXYQ"></script>
   </head>
   <body>
