--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <!--  BaiduMap API  -->
     <script type="text/javascript" src="https://api.map.baidu.com/api?v=3.0&ak=z8fH2H3aZfAVSVGkVIRMG2vUPYzrvXYQ"></script>
+    <!-- ClustrMap -->
+     <script 
+      type="text/javascript" 
+      id="clstr_globe" 
+      src="//clustrmaps.com/globe.js?d=vEwQ1Z-1fYh5N5MtTNr_YX7o41c1RV86KEFXxYd5j_Y">
+    </script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
